scribble-assertions/src/test/resources/good/extensions/assertions/timeout/SolverTimeout.scr
module bad.extensions.assertions.SolverTimeout;

type <java> "java.lang.integer" from "rt.jar" as integer;


// Check the message flow
global protocol Prot1(role A, role B, role C, role D)
{	[x<0]
	MSG1(x:integer, y:integer) from A to B;
	
	MSG1(x, y) from B to C;
	
	[z<x]
	MSG1(z:integer) from C to D;
}